--- a/dotnet/core/MeldRx.Community.Mcp.Core/MeldRx.Community.Mcp.Core.csproj
+++ b/dotnet/core/MeldRx.Community.Mcp.Core/MeldRx.Community.Mcp.Core.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Hl7.Fhir.R4" Version="5.11.7" />
     <PackageReference Include="ModelContextProtocol.AspNetCore" Version="0.1.0-preview.13" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.10.0" />
   </ItemGroup>
