--- a/dotnet/tools/MeldRx.Community.McpTools/MeldRx.Community.McpTools.csproj
+++ b/dotnet/tools/MeldRx.Community.McpTools/MeldRx.Community.McpTools.csproj
@@ -5,9 +5,6 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\core\MeldRx.Community.Mcp.Core\MeldRx.Community.Mcp.Core.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Hl7.Fhir.R4" Version="5.11.6" />
+    <ProjectReference Include="..\..\core\MeldRx.Community.Mcp.Core\MeldRx.Community.Mcp.Core.csproj" />
   </ItemGroup>
 </Project>
