--- a/.github/workflows/dotnet-tools-pr-validator.yaml
+++ b/.github/workflows/dotnet-tools-pr-validator.yaml
@@ -1,14 +1,16 @@
 on:
   pull_request:
     paths:
-      - "dotnet/tools/MeldRx.Community.McpTools/ServiceCollectionExtensions.cs"
+      - "dotnet/tools/MeldRx.Community.McpTools/**"
 
 jobs:
-  check_dotnet_restrictions:
+  check_dotnet_tools_restrictions:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
 
       - name: Build pr-validator
         working-directory: dotnet/pr-validator/MeldRx.Community.PrValidator
@@ -18,4 +20,10 @@ jobs:
       - name: Run pr-validator
         working-directory: dotnet/pr-validator/MeldRx.Community.PrValidator/bin/Release/net8.0/linux-x64
         run: |
-          ./pr-validator verify-sc
+          CHANGED_FILES="$(git diff --name-only HEAD^1 HEAD | paste -sd ' ' -)";
+
+          echo "-- Verifying ServiceCollectionExtensions.cs --";
+          ./pr-validator verify-sc;
+
+          echo "-- Verifying directory structure --";
+          ./pr-validator verify-tools-dir -c $CHANGED_FILES;
