Implemented ability to detect project changes and run them with docker to test tools

--- a/dotnet/servers/darena-solutions/MeldRx.Community.McpServers.DarenaSolutions.FhirCrud/appsettings.json
+++ b/dotnet/servers/darena-solutions/MeldRx.Community.McpServers.DarenaSolutions.FhirCrud/appsettings.json
@@ -8,8 +8,8 @@
   "AllowedHosts": "*",
   "ApplicationSettings": {
     "DatabaseConStr": "Host=localhost;Port=5432;Database=mcp_sample_identity;Username=postgres;Password=my_password",
-    "MigrateDatabase": true,
-    "UseIdentityServerAuthentication": true,
+    "MigrateDatabase": false,
+    "UseIdentityServerAuthentication": false,
     "DefaultClients": [
       {
         "ClientId": "1fc37c5e5a1241ce90945bb045ad4086",
