--- a/dotnet/pr-validator/MeldRx.Community.PrValidator/MeldRx.Community.PrValidator.csproj
+++ b/dotnet/pr-validator/MeldRx.Community.PrValidator/MeldRx.Community.PrValidator.csproj
@@ -13,5 +13,6 @@
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="Microsoft.CodeAnalysis" Version="4.14.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="4.14.0" />
+    <PackageReference Include="ModelContextProtocol.AspNetCore" Version="0.2.0-preview.1" />
   </ItemGroup>
 </Project>
