--- a/.github/workflows/deploy-mcp-server.yaml
+++ b/.github/workflows/deploy-mcp-server.yaml
@@ -3,6 +3,14 @@ on:
     paths:
       - "dotnet/servers/**"
 
+env:
+  DOKPLOY_API_KEY: ${{ secrets.DOKPLOY_API_KEY }}
+  DOKPLOY_API_URL: ${{ vars.DOKPLOY_API_URL }}
+  DOKPLOY_GITHUB_URL: ${{ vars.DOKPLOY_GITHUB_URL }}
+  DOKPLOY_PROJECT_ID: ${{ vars.DOKPLOY_PROJECT_ID }}
+  DOKPLOY_SERVER_ID: ${{ vars.DOKPLOY_SERVER_ID }}
+  DOKPLOY_SUBDOMAIN: ${{ vars.DOKPLOY_SUBDOMAIN }}
+
 jobs:
   deploy_mcp_servers:
     runs-on: ubuntu-latest
