Initial draft of sharp-on-mcp specification

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,3 +7,9 @@ theme:
 nav:
   - Overview: index.md
   - Introduction & Vision: intro-vision.md
+  - The Problem We're Solving: problem.md
+  - SHARP on MCP: sharp-on-mcp.md
+  - Terminology: terminology.md
+  - 3 Key Components of SHARP on MCP: key-components.md
+  - Getting Started: getting-started.md
+  - "Our Ask: Call for Collaborators": ask-collaborators.md
