--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,16 @@ extra_javascript:
   - javascript/readthedocs.js
 theme:
   name: material
+  palette:
+    - scheme: default
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+
+    - scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
 
 nav:
   - Overview: index.md
