--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,6 @@ nav:
   - The Problem We're Solving: problem.md
   - SHARP on MCP: sharp-on-mcp.md
   - Terminology: terminology.md
-  - 3 Key Components of SHARP on MCP: key-components.md
+  - 3 Key Components: key-components.md
   - Getting Started: getting-started.md
   - "Our Ask: Call for Collaborators": ask-collaborators.md
