--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,12 +16,11 @@ theme:
 
 nav:
   - Overview: index.md
-  - Introduction & Vision: intro-vision.md
   - The Problem We're Solving: problem.md
-  - SHARP on MCP: sharp-on-mcp.md
+  - Scope and Components: sharp-on-mcp.md
   - Specification:
       - Terminology: terminology.md
-      - Key Components: key-components.md
+      - 3 Key Components: key-components.md
   - Contributing:
       - Getting Started: getting-started.md
-      - "Our Ask: Call for Collaborators": ask-collaborators.md
+      - Contributing and Bounty Program: ask-collaborators.md
